# multilingual-gsm-symbolic

./: .gitignore  README.md  eval.yaml  pyproject.toml
src/multilingual_gsm_symbolic/: __init__.py  _helpers.py  gsm_parser.py  load_data.py  templates.py
src/multilingual_gsm_symbolic/data/templates/ara/: replacements.json
src/multilingual_gsm_symbolic/data/templates/dan/: replacements.json
src/multilingual_gsm_symbolic/data/templates/deu/: replacements.json
src/multilingual_gsm_symbolic/data/templates/eng/: replacements.json
src/multilingual_gsm_symbolic/data/templates/eng_metric/: replacements.json
src/multilingual_gsm_symbolic/data/templates/est/: replacements.json
src/scripts/: format_long_toml.py  translate_templates.py
tests/: conftest.py  test_assignments.py  test_chevron_arithmetic.py  test_combinations.py  test_formatting.py  test_generation.py  test_helpers.py  test_toml_loading.py
tests/combinations_cache/: ara.json  dan.json  deu.json  eng.json  eng_metric.json  est.json  fra.json  hin.json  isl.json  ita.json  jpn.json  mar.json  nld.json  nob.json  rus.json  ukr.json  zho.json
tests/test_templates/: eng_nested_tuple_unpacking.toml  eng_number_agreement.toml
tests/test_templates/test_json_toml_loading/: dan_0082.json  dan_0082.toml  deu_0015.json  deu_0015.toml  eng_0000.json  eng_0000.toml  eng_0004.json  fra_0095.json  fra_0095.toml  isl_0036.json  isl_0036.toml  ita_0032.json  ita_0032.toml  nld_0029.json  nld_0029.toml  nob_0018.json  nob_0018.toml  por_0095.json  por_0095.toml  spa_0014.json  spa_0014.toml
(+2015 files in other folders)
