[project]
name = "multilingual-gsm-symbolic"
version = "0.4.2"
description = "A package for generating multilingual symbolic GSM math problems"
readme = "README.md"
authors = [
    { name = "Kenneth Enevoldsen", email = "kennethcenevoldsen@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["numpy>=2.0.0", "pydantic>=2.0.0"]

[dependency-groups]
dev = ["ruff>=0.9.7", "pytest>=8.3.5", "ty>=0.0.1", "ipykernel>=7.2.0"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
